# deepresearch

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  app.py  check_api_keys.py  commit_message.txt  config.py  download_fonts.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  theme_config.py
.streamlit/: config.toml  custom_theme.css  custom_theme.html  custom_theme.js  style.css
docs/: README.md  development.md  usage.md
modules/chat/: __init__.py  conversation.py  display.py  history.py
modules/research/: __init__.py  models.py  report.py  search.py
modules/session/: __init__.py  state.py
modules/ui/: __init__.py  components.py  main_content.py  sidebar.py  styles.py  theme.py
scripts/: run_app.py
static/css/: styles.css
tests/: __init__.py  test_utils.py
utils/: cache.py  logger.py  model.py  search.py
